Fix scrollbar.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -253,6 +253,7 @@ height: 100%;
 	padding-bottom: 20px;
 	padding-left: 20px;
 	background: #ececec;
+    overflow: auto;
 }
 
 table thead th {
